--- a/LabTask1sln/LabTask1/Views/Home/Create.cshtml
+++ b/LabTask1sln/LabTask1/Views/Home/Create.cshtml
@@ -1,22 +1,24 @@
-﻿@{
-    ViewBag.Title = "Create";
-}
+﻿@model LabTask1.Models.StudentModel
+
 <div class="ctitel">
     <h2>Student Form</h2>
     <p> Give Student Info here.</p>
 </div>
 <div class="contenar">
-    <form action="#" method="post" class="d-flex justify-content-center">
+    <form action="/Home/Student" method="post" class="d-flex justify-content-center">
         <div class="element">
-            <input class="form-control" type="text" value="" name="Name" placeholder="Name" />          
+            <input class="form-control" type="text" value="" name="Name" placeholder="Name" />
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             <input class="form-control" type="text" value="" name="ID" placeholder="ID" />
+            @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
             <input class="form-control" type="date" value="" name="DoB" placeholder="Date of barth" />
-            <input class="form-control" type="text" value="" name="Credit" placeholder="Credit" />
             <input class="form-control" type="text" value="" name="CGPA" placeholder="CGPA" />
+            <input class="form-control" type="text" value="" name="Credit" placeholder="Credit" />
             <input class="btn btn-success" type="submit" value="submit" />
             <input class="btn btn-danger" type="reset" value="reset" />
         </div>
     </form>
 </div>
+
 
 
